Bug 94848 - Crash after changing paragraph style using mouse click (on tab Font)
Summary: Crash after changing paragraph style using mouse click (on tab Font)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.2.2 release
Hardware: x86 (IA32) Linux (All)
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.0.4 target:5.0.3
Keywords: bibisected, haveBacktrace, regression
: 95364 95382 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-10-07 08:08 UTC by Cor Nouws
Modified: 2015-12-17 10:34 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
document that crashes with changing style (11.54 KB, application/vnd.oasis.opendocument.text)
2015-10-07 08:09 UTC, Cor Nouws
Details
backtrace for 94848 (24.94 KB, text/x-log)
2015-10-10 07:47 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2015-10-07 08:08:14 UTC
I'll attach a document that reliably crashes for me

1. put focus in first paragraph
2. open Styles and Formatting
3. right click on style Title, choose Modify, click size 20, hit Enter for OK

  > crash
Comment 1 Cor Nouws 2015-10-07 08:09:17 UTC
Created attachment 119380 [details]
document that crashes with changing style
Comment 2 Cor Nouws 2015-10-07 08:14:03 UTC
Changing title: set (in particular document?) with question mark. It happens too (now and then?) with just a clean document, type foo, apply heading one, change font > Crash
Comment 3 Cor Nouws 2015-10-07 08:26:08 UTC
NB
- tested with clean user profile
- Has nothing to do with bug 93145 - crashes too when I use Galaxy (see comment #2 there)
- Maybe related to bug 93493
Comment 5 Buovjaga 2015-10-08 13:50:22 UTC
(In reply to Cor Nouws from comment #0)
> I'll attach a document that reliably crashes for me
> 
> 1. put focus in first paragraph
> 2. open Styles and Formatting
> 3. right click on style Title, choose Modify, click size 20, hit Enter for OK
> 
>   > crash

click size 20 = Changed font size to 20.
No crash.

Win 7 Pro 64-bit, Version: 5.0.2.2 (x64)
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale: fi-FI (fi_FI)
Comment 6 Cor Nouws 2015-10-08 20:04:28 UTC
(In reply to Beluga from comment #5)

> click size 20 = Changed font size to 20.
> No crash.

The document also crashes for me today..

Maybe 32 Bits Linux ??
Comment 7 MM 2015-10-08 21:19:10 UTC
No crash with v5.0.2.2 under mint 17.2 x64.
Comment 8 Cor Nouws 2015-10-09 06:37:54 UTC
tested again..

1. fresh userprofile
2. new text document
3. type "this is the title" Enter, "more text"
4. put cursor back in first line
(turn autospellchecking off)
5. context menu, Edit paragraph style
6. click tab Font
7. click size 20
8. Enter
  > Crash

This was, more or less, my original problem.
Same when I set first line on heading 1 or leave it to default or open the context menu on the second line..or whatever..

Now when I use the key board, what I usually do, the program does not crash..

How is that for others?
Comment 9 Maxim Monastirsky 2015-10-09 07:47:39 UTC
@Cor: Would be great to get a backtrace of that crash.
Comment 10 Julien Nabet 2015-10-10 06:44:46 UTC
(In reply to Cor Nouws from comment #8)
>...
> How is that for others?

With LO Debian package 5.0.2.2, I don't reproduce this.

About putting cursor back in first line, could you be even more precise?
1) with arrow key? with mouse?
2) at the beginning of the first line, at the end of it?

Also, did you enable accessibility option? If yes, could you disable it for the test?
Maxim is right of course, if you can easily reproduce this, could you provide a backtrace?
Comment 11 Cor Nouws 2015-10-10 07:45:53 UTC
(In reply to Julien Nabet from comment #10)
> (In reply to Cor Nouws from comment #8)
> >...
> > How is that for others?
> 
> With LO Debian package 5.0.2.2, I don't reproduce this.
> 
> About putting cursor back in first line, could you be even more precise?
> 1) with arrow key? with mouse?

Makes no difference.

> 2) at the beginning of the first line, at the end of it?

Makes no difference.

> Also, did you enable accessibility option? If yes, could you disable it for
> the test?

What option where?
T > O > LOffice > Accesibility has one checked in the lower section and four in the upper. Mean that? 
Unchecking makes no difference.

> Maxim is right of course, if you can easily reproduce this, could you
> provide a backtrace?

Will do.
Comment 12 Cor Nouws 2015-10-10 07:47:09 UTC
Created attachment 119476 [details]
backtrace for 94848
Comment 13 Julien Nabet 2015-10-10 18:28:33 UTC
Let's put this one to NEW since we got a bt.
--enable-mergelibs related?
Comment 14 Björn Michaelsen 2015-10-12 13:34:03 UTC
Crashing on 5.0.2 with Ubuntu packages (which use mergedlibs). Not reproducable on master (different UI).
Comment 15 Björn Michaelsen 2015-10-12 16:13:51 UTC
So:
- reproducible with 5.0.2 release builds
- NOT reproducible with master@c65ff0723f3b0df108bec006be6d5939d4999e10
- NOT reproducible with 50max bibisect repo latest

So not bibisectable (at least with the 50max repo).

The UI is different in the cases where it is not reproducible: The tab has three sections "Western Text Font", "Asian Text Font", "CTL Text Font". OTOH, when this is reproducible, there are no such sections and there are Pulldown Widgets instead of ListBoxes.
Comment 16 Björn Michaelsen 2015-10-12 16:41:49 UTC
Ok, this is reproducible on 50max latest, when you ensure first that on:
Tools->Options->Language Settings->Languages->Default Languages for Documents

both "Asian" and "Complex Text Layout" are NOT checked.

Even with that, I cannot reproduce this on master, so I assume it has been fixed in the meantime.
Comment 17 Björn Michaelsen 2015-10-12 17:03:15 UTC
# bad: [dda106fd616b7c0b8dc2370f6f1184501b01a49e] source-hash-0db96caf0fcce09b87621c11b584a6d81cc7df86
# good: [5b9dd620df316345477f0b6e6c9ed8ada7b6c091] source-hash-2851ce5afd0f37764cbbc2c2a9a63c7adc844311
git bisect start 'latest' 'oldest'
# good: [0c30a2c797b249d0cd804cb71554946e2276b557] source-hash-45aaec8206182c16025cbcb20651ddbdf558b95d
git bisect good 0c30a2c797b249d0cd804cb71554946e2276b557
# good: [2ce02b2ce56f12b9fcb9efbd380596975a3a5686] source-hash-17d714eef491bda2512ba8012e5b3067ca19a5be
git bisect good 2ce02b2ce56f12b9fcb9efbd380596975a3a5686
# bad: [40875247f0002056effdf6d2fbe43627691cd86c] source-hash-93f0b14458a618ad575cd446680e5c4aa7d87bdc
git bisect bad 40875247f0002056effdf6d2fbe43627691cd86c
# good: [07e62597be0600b763c4d18204799dcf09d2d3d9] source-hash-b2ead407c70f71974a1eac79df09072ff8bd0cc2
git bisect good 07e62597be0600b763c4d18204799dcf09d2d3d9
# good: [160904095d61878ae1483787bf25f4c4148365e4] source-hash-2049e3ec22db0684683261746188b40428a0d0e2
git bisect good 160904095d61878ae1483787bf25f4c4148365e4
# bad: [957b579081899413657c40feb8b41b5a43a8e55b] source-hash-74706c4057e027898022ac42de210302cdc92d99
git bisect bad 957b579081899413657c40feb8b41b5a43a8e55b
# bad: [4daa0b0b691bfc36e5924f61cc046142845c5d70] source-hash-f6d4cd396803f568ca667ed5e4d7725ade99b5df
git bisect bad 4daa0b0b691bfc36e5924f61cc046142845c5d70
# bad: [27de78aa6a89c81519f7882e2201a2fc4b6c5624] source-hash-f016ed2e4f7b8bec79fcaf8e4b566861a7b6ae76
git bisect bad 27de78aa6a89c81519f7882e2201a2fc4b6c5624
# bad: [8536df1e00d1bbdb1c2e66bde9ed551dff1a08d3] source-hash-4de83e2c322509c0fb1b989f7e4898728fc4a408
git bisect bad 8536df1e00d1bbdb1c2e66bde9ed551dff1a08d3
# bad: [a8db8c63e0bd595e16fbbffc49911b77bf94da96] source-hash-abce3f30ac8e1c1d40c76de611b6a10d00d7555c
git bisect bad a8db8c63e0bd595e16fbbffc49911b77bf94da96
# good: [436a7ed41b8c084b15a17b95027e4d2785a94d97] source-hash-84c73c983577e33dda266bbfcdd89b9e1202906b
git bisect good 436a7ed41b8c084b15a17b95027e4d2785a94d97
# bad: [442746c7621790af396a8b6b39c0ccebab02916c] source-hash-aef1826d9ca318a1359a2116e7f146e993413234
git bisect bad 442746c7621790af396a8b6b39c0ccebab02916c
# good: [53871cea909a0b86726f189bcfdab2890ffcf9e9] source-hash-a31991c4188e91326941fbe510ce70129d1ccde8
git bisect good 53871cea909a0b86726f189bcfdab2890ffcf9e9
# first bad commit: [442746c7621790af396a8b6b39c0ccebab02916c] source-hash-aef1826d9ca318a1359a2116e7f146e993413234

So yet another vclptr fallout regression.
Comment 18 Caolán McNamara 2015-10-15 16:20:44 UTC
https://gerrit.libreoffice.org/19397 for 5-0 backport
Comment 19 Commit Notification 2015-10-15 17:15:30 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1995ad7d080b1a9da29f0ebfb06641451d6f3653&h=libreoffice-5-0

Resolves: tdf#94848 crash on focus with un-cleared but dead mpSubEdit

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Michael Meeks 2015-10-15 17:32:36 UTC
I got a similar crash from bug#93733 and picked that to -5-0 as well =)
Thanks Caolan & Julien.
Comment 21 Commit Notification 2015-10-20 12:36:12 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-5-0-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b09dbf6c718ba0b2d920988b510bfd130bc2c3f3&h=libreoffice-5-0-3

Resolves: tdf#94848 crash on focus with un-cleared but dead mpSubEdit

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Cor Nouws 2015-10-27 17:20:50 UTC
*** Bug 95364 has been marked as a duplicate of this bug. ***
Comment 23 Katarina Behrens (Inactive) 2015-10-30 08:31:27 UTC
*** Bug 95382 has been marked as a duplicate of this bug. ***
Comment 24 jochen 2015-11-10 09:16:20 UTC
I can confirm, that with build 5.0.3.2 the issue now is gone.
Comment 25 Robinson Tryon (qubit) 2015-12-17 10:34:09 UTC Comment hidden (obsolete)