Resolves: tdf#94848 crash on focus with un-cleared but dead mpSubEdit

was... fixes memleak : clear self referring VclPtr in MetricBox

Clears self referring VclPtr called mpField in MetricBox (inherited from FormatterBase class)
via dispose() method of MetricBox.

Reviewed-on: https://gerrit.libreoffice.org/18674
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 36c11cb71c6ec107cc08b16109e468765abc9867)

Change-Id: I375e03e814de3c6e47c36b1fc6f625b04521a5e2

memleak:clear self referring VclPtr in *Field and *Box classes

Clears self referring VclPtr called mpField via FormatterBase in :

1. MetricField, PatternField, NumericField, CurrencyField, DateField,
   TimeField
2. PatternBox, NumericBox, CurrencyBox, DateBox, TimeBox

via respective dispose() methods.

Change-Id: I7f92fefd49756cabe7db7d240781260a2d4cd298
Reviewed-on: https://gerrit.libreoffice.org/18701
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit a44e03b5d7822d026a3b2fbaf039522f085defed)
Reviewed-on: https://gerrit.libreoffice.org/19398
Reviewed-by: Dennis Francis <dennisfrancis.in@gmail.com>
Reviewed-by: Eike Rathke <erack@redhat.com>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Jan Holesovsky <kendy@collabora.com>