include/vcl/field.hxx
@@ -489,6 +489,7 @@ public:
     virtual bool            PreNotify( NotifyEvent& rNEvt ) SAL_OVERRIDE;
     virtual bool            Notify( NotifyEvent& rNEvt ) SAL_OVERRIDE;
     virtual void            Modify() SAL_OVERRIDE;
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 
@@ -518,6 +519,7 @@ public:
     virtual void            First() SAL_OVERRIDE;
     virtual void            Last() SAL_OVERRIDE;
     virtual bool            set_property(const OString &rKey, const OString &rValue) SAL_OVERRIDE;
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 
@@ -588,6 +590,7 @@ public:
     { return ConvertDoubleValue( static_cast<double>(nValue), nDecDigits, eInUnit, eOutUnit ); }
 
     virtual bool            set_property(const OString &rKey, const OString &rValue) SAL_OVERRIDE;
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 
@@ -610,6 +613,7 @@ public:
     virtual void            Down() SAL_OVERRIDE;
     virtual void            First() SAL_OVERRIDE;
     virtual void            Last() SAL_OVERRIDE;
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 
@@ -644,6 +648,7 @@ public:
     Date                    GetFirst() const                    { return maFirst; }
     void                    SetLast( const Date& rNewLast )     { maLast = rNewLast; }
     Date                    GetLast() const                     { return maLast; }
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 
@@ -679,6 +684,7 @@ public:
     tools::Time             GetLast() const                     { return maLast; }
 
     void                    SetExtFormat( ExtTimeFieldFormat eFormat );
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 
@@ -697,6 +703,7 @@ public:
     virtual void            Modify() SAL_OVERRIDE;
 
     virtual void            ReformatAll() SAL_OVERRIDE;
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 
@@ -720,6 +727,7 @@ public:
     virtual void            ReformatAll() SAL_OVERRIDE;
 
     void                    InsertValue( sal_Int64 nValue, sal_Int32  nPos = COMBOBOX_APPEND );
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 
@@ -752,6 +760,8 @@ public:
     // Needed, because GetValue() with nPos hide these functions
     virtual sal_Int64       GetValue( FieldUnit eOutUnit ) const SAL_OVERRIDE;
     virtual sal_Int64       GetValue() const SAL_OVERRIDE;
+
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 
@@ -773,6 +783,7 @@ public:
     virtual void            ReformatAll() SAL_OVERRIDE;
 
     virtual sal_Int64       GetValue() const SAL_OVERRIDE;
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 
@@ -791,6 +802,7 @@ public:
     virtual void            Modify() SAL_OVERRIDE;
 
     virtual void            ReformatAll() SAL_OVERRIDE;
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 
@@ -810,6 +822,7 @@ public:
     virtual void            Modify() SAL_OVERRIDE;
 
     virtual void            ReformatAll() SAL_OVERRIDE;
+    virtual void            dispose() SAL_OVERRIDE;
 };
 
 #endif // INCLUDED_VCL_FIELD_HXX
